--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,8 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
-ext.abiCodes = ["armeabi-v7a": 1, "arm64-v8a": 2, "x86":3, "x86_64":4]
+//ext.abiCodes = ["armeabi-v7a": 1, "arm64-v8a": 2, "x86":3, "x86_64":4]
+ext.abiCodes = ["armeabi-v7a": 1]
 ext.universalBase = 8000
 
 android {
@@ -15,6 +16,9 @@ android {
         versionCode 39
         versionName "2024-09-15-release"
 
+        ndk {
+            abiFilters "armeabi-v7a"
+        }
         vectorDrawables.useSupportLibrary = true
     }
 
